2006-01-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* common.php:  Untested fix for Ticket #59
	
2006-01-18 François Proulx <francois.proulx@gmail.com>
	* Remove unneeded .cvsignore files since ths svn:ignore property is set to the same list 
	
2006-01-11 Rob Janes <janes.rob@gmail.com>
    * classes/User.php: added setters, getters, throw exceptions, added refresh() subr, tweaked language

2006-01-09 Max Horváth <max.horvath@maxspot.de>
	* createDoc.sh: added description of how to install requirements

2006-01-08 Benoit Grégoire  <bock@step.polymtl.ca>
 	* common.php:  Improve path detection code, and start moving PATH detection back to a central location.
 	You should NEVER go to any $_SERVER[] variables for path related stuff, all you need is already available
 	 in defines.
 	* UserReport.php:  Remove dangling reference to BASEPATH.
 	* install.php:  Use centralised path detection.

2006-01-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* config.php, common.php:  Completely remove SYSTEM_PATH from config.php, making one less config option to manage.  It is now autodetected.

2006-01-03 Rob Janes <janes.rob@gmail.com>
	* added support for classes/EventLogging.php.
	* modified include/common.php to pull in the EventLogging class
	* modified index.php to kick start error logging with minimal setup.
	  I didn't setup a css for this, so any errors are simply pushed out
	  when the logging channel is destructed.
	* other changes to include/common.php - a host of utility functions,
	  prefixed with "cmn" to avoid namespace collision.
	* stock config.php, added global $AVAIL_LOCALE_ARRAY, cause of my change
	  to include/common.php, wrapping the require_once in a function.

2006-01-04 Pascal Leclerc <isf@plec.ca>
    * install.php : New security validation and small bugs fix in admin account creation

2006-01-02 Rob Janes <janes.rob@gmail.com>
	* split static stylesheet.css from smarty template stuff.
	  local_content/default/stylesheet.css has only smarty template stuff.